webhook/dev/manifests/cluster-config/validating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "intercept-resources.discrete.events"
webhooks:
  - name: "sleeve-webhook.discrete.events"
    namespaceSelector:
      matchLabels:
        admission-webhook: enabled
    clientConfig:
      service:
        namespace: default
        name: simple-kubernetes-webhook
        path: /validate-resource
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRekNDQWl1Z0F3SUJBZ0lVWW53dW9YM3NteVhZ
[...]
    rules:
    # TODO GENERALIZE
      - apiGroups: ["cassandra.datastax.com"]
        apiVersions: ["v1beta1"]
        operations: ["CREATE", "UPDATE", "DELETE"]
        resources: ["cassandradatacenters"]
        scope: "Namespaced"

      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE", "DELETE"]
        resources: ["deployments", "statefulsets", "replicasets", "daemonsets"]
        scope: "Namespaced"
      - apiGroups: ["batch"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE", "DELETE"]
        resources: ["jobs", "cronjobs"]
        scope: "Namespaced"
      - apiGroups: [""] # "" indicates the core API group
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE", "DELETE"]
        resources: ["pods", "persistentvolumeclaims", "services"]
        scope: "Namespaced"
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 15
    failurePolicy: Ignore
